Dev-RBI/src/objects/Customer_Projects__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Customer Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer</relationshipLabel>
        <relationshipName>Customer_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Id__c</fullName>
        <formula>Customer_User_Id__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hyperlink__c</fullName>
        <description>This field is used in the related list of the project for the hyperlink</description>
        <formula>HYPERLINK(&quot;/&quot; + Id,  AccountId__r.Name,  &quot;_blank&quot;)</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>AccountId__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_User_Email__c</fullName>
        <formula>Customer_User_Id__r.Contact.Email</formula>
        <label>Customer User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the User Id of the Customer Manager Id</description>
        <label>Customer User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores the value to indicate Exceptions for an approval from Customer</description>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTR_File_Path__c</fullName>
        <description>Used to store FTR file path of s3</description>
        <label>FTR File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Approval_Status__c</fullName>
        <description>Used to store the customers approval for the project. Set by customer from customer portal</description>
        <label>Project Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Customer</relationshipLabel>
        <relationshipName>Customer_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Id__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Region__c</fullName>
        <formula>TEXT(Project_Id__r.Project_Region__c)</formula>
        <label>Project Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>TEXT(Project_Id__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Stores the comments from the Customer while approving/rejecting a project</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Address_City__c</fullName>
        <formula>TEXT(Project_Id__r.Site_Address_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Head_Email__c</fullName>
        <label>Technical Head Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total_Weights__c</fullName>
        <formula>Weightage_Basement__c +  Weightage_Electrification_Sanitation__c  +  Weightage_Excavaton_of_Footings__c  +  Weightage_Finishing__c  +  Weightage_Masonary__c  +  Weightage_RCC_Slab_Casting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weights</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weightage_Basement__c</fullName>
        <label>Weightage - Basement(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Electrification_Sanitation__c</fullName>
        <label>Weightage-Electrification &amp; Sanitation %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Excavaton_of_Footings__c</fullName>
        <label>Weightage - Excavaton of Footings(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Finishing__c</fullName>
        <label>Weightage - Finishing (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Masonary__c</fullName>
        <description>Weightage for Masonary ( Brickwork, Doors and Window Frames)</description>
        <inlineHelpText>Weightage for Masonary ( Brickwork, Doors and Window Frames)</inlineHelpText>
        <label>Weightage - Masonary(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_RCC_Slab_Casting__c</fullName>
        <label>Weightage - RCC Slab Casting (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weightage_Type__c</fullName>
        <description>This field deterimes the weightage reference values.</description>
        <label>Weightage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Realty BI</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CUSPROJ-{0000000000}</displayFormat>
        <label>Customer Projects Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Weights_Rule</fullName>
        <active>true</active>
        <description>Sum of weights should not be greater than 100%</description>
        <errorConditionFormula>Total_Weights__c  &gt; 1.00</errorConditionFormula>
        <errorMessage>Sum of weights should not be greater than 100%</errorMessage>
    </validationRules>
</CustomObject>